<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:background="@color/card_background_4"
    android:padding="@dimen/card_padding"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation_enable"
    app:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/profile_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_ca" />

    <TextView
        android:id="@+id/tv_LastName"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:hint="@string/last_name_hint"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_FSName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_FSName"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_LastName"
        tools:hint="@string/first_second_name_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>
